# clock-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config  config.toml
clock-tui/: Cargo.toml
clock-tui/examples/: config.toml
clock-tui/src/: app.rs  bricks_text.rs  clock_text.rs  config.rs  lib.rs
clock-tui/src/app/: modes.rs
clock-tui/src/app/modes/: clock.rs  countdown.rs  pause.rs  stopwatch.rs  timer.rs
clock-tui/src/clock_text/: font.rs  point.rs
clock-tui/src/clock_text/font/: bricks.rs  mod.rs
src/: app.rs  bricks_text.rs  lib.rs  main.rs
src/app/: modes.rs
src/app/modes/: clock.rs  countdown.rs  stopwatch.rs  timer.rs
src/bricks_text/: chars.rs
xtask/: Cargo.toml
xtask/src/: main.rs
