[package]
name = "clock-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18.0"
crossterm = "0.24"
chrono = "0.4"
chrono-tz = "0.4"
clap = { version = "3.2.12", features = ["derive"] }
regex = "1.6.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "tclock"
