[package]
name = "clock-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = "0.19"
crossterm = "0.25"
chrono = "0.4"
chrono-tz = "0.8"
clap = { version = "4.0", features = ["derive"] }
regex = "1.7"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

[lib]
name = "clock_tui"
path = "src/lib.rs"

[[bin]]
name = "tclock"
path = "src/bin/main.rs"
bench = false
