[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["derive"] }
clap_mangen = "0.1"
clap_complete = "3.2.4"
clock-tui = { path = "../clock-tui" }
